# CloudEdit

Application/: Application.cpp  Application.h  CMakeLists.txt  Color.h  Configuration.h  EntitySystem.cpp  EntitySystem.h  Math.h  NameContainer.h  Widgets.cpp  Widgets.h  Window.cpp  Window.h
Application/lib/SDL2/cmake/: sdl2-config-version.cmake
Application/lib/SDL2_ttf/cmake/: sdl2_ttf-config-version.cmake
Application/unit/: CMakeLists.txt
Application/unit/lib/docs/: gmock_cook_book.md
Application/unit/lib/docs/reference/: matchers.md  testing.md
Server/: Application.cpp  Application.h  CMakeLists.txt  Config.h  Network.cpp  Network.h  main.cpp
Server/integration/: connect.py  sendrecv.py
Server/unit/: CMakeLists.txt  ClientContainerTest.cpp  ClientTest.cpp
